sandbox/output
GildedRoseTest.java:35: error: cannot find symbol
            .filter(GildedRose.isNormalItem())
                              ^
  symbol:   method isNormalItem()
  location: class GildedRose
1 error
